cmake_minimum_required(VERSION 3.22.1)
project(racs_client LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 17)

set(RACS_TEST_DIR ${CMAKE_SOURCE_DIR}/test)
set(RACS_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

find_package(Msgpack)

if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    find_package(UUID)
endif ()

include_directories(
        ${MSGPACK_INCLUDE_DIRS}
        ${UUID_INCLUDE_DIRS}
)

file(GLOB_RECURSE RACS_TEST_FILES CONFIGURE_DEPENDS ${RACS_TEST_DIR}/*.hpp ${RACS_TEST_DIR}/*.cpp)
file(GLOB_RECURSE RACS_SOURCE_FILES CONFIGURE_DEPENDS ${RACS_SOURCE_DIR}/*.c)
file(GLOB_RECURSE RACS_INCLUDE_FILES CONFIGURE_DEPENDS ${RACS_SOURCE_DIR}/*.h)

add_library(racs STATIC
        ${RACS_SOURCE_FILES}
        ${RACS_INCLUDE_FILES}
)

target_link_libraries(racs
        ${MSGPACK_LIBRARIES}
        ${UUID_LIBRARIES}
)

install(FILES ${RACS_INCLUDE_FILES}
        DESTINATION include)
install(TARGETS racs
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include
)
